unpackaged/main/default/objects/pse__HolidayObj__c/pse__HolidayObj__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__HolidayHelp</customHelpPage>
    <description>Use the holiday object to define government/public holidays, not to book paid time off (PTO) or vacations. You should create government/public holidays for each work calendar in your organization, on the Holidays related list: for example, you can create a holiday for July 4th 2014, with zero work hours, on the US Full-Time work calendar. Depending on configuration, government/public holidays are taken into account when setting scheduling strategies. Holidays have a lookup relationship to work calendars.</description>
    <label>Holiday</label>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>