unpackaged/main/default/objects/pse__HolidayObj__c/fields/pse__Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>