unpackaged/main/default/objects/pse__HolidayObj__c/fields/pse__Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Work_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Enter the number of hours worked on this day (for example, 0 for a full day off, 4 for a half day)</inlineHelpText>
    <label>Work Hours</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>