unpackaged/main/default/objects/pse__HolidayObj__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Date__c</columns>
    <columns>pse__Work_Calendar__c</columns>
    <columns>pse__Work_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>